# pond_mike

./: README.md
data_pipeline/: clickhouse.py  data_process.py  minio.py
sql/: view.sql
testes/: .env  app.py  docker_compose.yml  pyproject.toml  user.xml
